feat(pricing): /prices/:id 응답을 프론트 ProductData에 1:1 매핑
시안 /lowest-price/{id} 화면이 그대로 받을 수 있도록
응답 형식 통째 교체.

- PriceDetailViewDto + PriceSourceItemDto + PricePointItemDto 신설
  (납작 구조, kim ProductData 타입과 1:1)
- SourceLogoRegistry — 쿠팡·네이버·마켓컬리·식자재왕 로고 정적 매핑
- Ingredient 에 category, image_url 컬럼 추가 (UI 노출용,
  kamisCategory 와는 별도)
- PriceDetailService: PriceTrendService 합쳐 priceHistory 30포인트
  포함 (단일 호출로 그래프까지 채움)
- PriceController detail() 응답 타입 교체

park 의 kamis_item_code (V007) 와 머지 — 충돌 해결 완료.